[#175761379] Refactor over review
