# ValidateOtp/index.ts
@@ -7,11 +7,8 @@ import { AzureContextTransport } from "io-functions-commons/dist/src/utils/loggi
 import { setAppContext } from "io-functions-commons/dist/src/utils/middlewares/context_middleware";
 import createAzureFunctionHandler from "io-functions-express/dist/src/createAzureFunctionsHandler";
 
-import { getConfigOrThrow } from "../utils/config";
 import { REDIS_CLIENT } from "../utils/redis";
-import { GetValidateOtp } from "./handler";
-
-const config = getConfigOrThrow();
+import { ValidateOtp } from "./handler";
 
 // tslint:disable-next-line: no-let
 let logger: Context["log"] | undefined;
@@ -25,10 +22,7 @@ const app = express();
 secureExpressApp(app);
 
 // Add express route
-app.post(
-  "/api/v1/merchant/cgn/otp/:otpcode/validate",
-  GetValidateOtp(REDIS_CLIENT)
-);
+app.post("/api/v1/merchant/cgn/otp/validate", ValidateOtp(REDIS_CLIENT));
 
 const azureFunctionHandler = createAzureFunctionHandler(app);
 
